0.9.0/_sources/generated/statsmodels.discrete.count_model.GenericZeroInflated.rst.txt
statsmodels.discrete.count_model.GenericZeroInflated
====================================================

.. currentmodule:: statsmodels.discrete.count_model

.. autoclass:: GenericZeroInflated

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~GenericZeroInflated.cdf
    
    
      ~GenericZeroInflated.cov_params_func_l1
    
    
      ~GenericZeroInflated.fit
    
    
      ~GenericZeroInflated.fit_regularized
    
    
      ~GenericZeroInflated.from_formula
    
    
      ~GenericZeroInflated.hessian
    
    
      ~GenericZeroInflated.information
    
    
      ~GenericZeroInflated.initialize
    
    
      ~GenericZeroInflated.loglike
    
    
      ~GenericZeroInflated.loglikeobs
    
    
      ~GenericZeroInflated.pdf
    
    
      ~GenericZeroInflated.predict
    
    
      ~GenericZeroInflated.score
    
    
      ~GenericZeroInflated.score_obs
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~GenericZeroInflated.endog_names
      ~GenericZeroInflated.exog_names
   
   