v0.10.2/_sources/generated/statsmodels.discrete.count_model.GenericZeroInflated.rst.txt
statsmodels.discrete.count\_model.GenericZeroInflated
=====================================================

.. currentmodule:: statsmodels.discrete.count_model

.. autoclass:: GenericZeroInflated

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         GenericZeroInflated.cdf
         GenericZeroInflated.cov_params_func_l1
         GenericZeroInflated.fit
         GenericZeroInflated.fit_regularized
         GenericZeroInflated.from_formula
         GenericZeroInflated.hessian
         GenericZeroInflated.information
         GenericZeroInflated.initialize
         GenericZeroInflated.loglike
         GenericZeroInflated.loglikeobs
         GenericZeroInflated.pdf
         GenericZeroInflated.predict
         GenericZeroInflated.score
         GenericZeroInflated.score_obs



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         GenericZeroInflated.endog_names
         GenericZeroInflated.exog_names

